# dns_server

./: Cargo.toml  flake.nix  module.nix
example/: config.toml
src/: config.rs  forwarder.rs  handler.rs  main.rs
