[package]
name = "dns_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.54", features = ["derive"] }
hickory-resolver = { version = "0.26.0-alpha.1", features = ["serde"] }
hickory-server = "0.26.0-alpha.1"
local-ip-address = "0.6.10"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.10"
